[metadata]
name = IPIdentify
version = 1.0.0
author = Abhiram Shibu
author_email = abhiramshibu1998 at gmail.com
description = An IP lookup tool based on ip-api.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abhiramshibu/IPIdentify
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src